UI Tweak for Patient Registration for Arabic

--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
@@ -21,3 +21,5 @@
   .hptl-phase1-add-consultation-form td {
     border-right: 1px solid #e6e6e6;
     width: 10px; }
+  .hptl-phase1-add-consultation-form .maternityRadio {
+    padding-left: 10px; }
