--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
@@ -44,3 +44,6 @@
       top: -1px;
       left: 15px;
       height: 101px; }
+  .htpl-phase1-primary-insurance-form .insuranceRadio {
+    padding-right: 10px;
+    padding-left: 0; }
