--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1512,3 +1512,80 @@
 }
 
 //Semantic UI CSS Owerwrite End Here //
+
+//App Arabic Version Starts  Here //
+.arabic_component {
+  direction: rtl;
+  text-align: right;
+  input {
+    &::placeholder {
+      text-align: right;
+    }
+  }
+  .text-arabic {
+    font-size: 1.1rem;
+  }
+  .spotlightSearchIconBox {
+    border-right: 1px solid #ced4d8;
+    border-left: 0 !important;
+  }
+  .print-area div {
+    float: left;
+    border-right: 1px solid #adaaaa;
+    border-left: 0;
+  }
+  .hdg_bredcrump {
+    background: url("./assets/images/breadcrump_border_Ar.webp") no-repeat top
+      left #fff !important;
+  }
+
+  .hptl-phase1-add-patient-form .primary-details,
+  .htpl-phase1-primary-insurance-form .primary-details,
+  .htpl-phase1-seconary-insurance-form .primary-details,
+  .hptl-phase1-add-consultation-form .primary-details {
+    border-left: 1px dashed #d3d3d3;
+    border-right: 0;
+  }
+  .hptl-phase1-footer button {
+    font-size: 1.2rem;
+    float: left;
+  }
+  .toggle-section .nav {
+    padding: 0;
+    right: auto;
+  }
+  .ui.search.dropdown > .text {
+    text-align: right;
+    float: right;
+  }
+  .ui.selection.dropdown > .delete.icon,
+  .ui.selection.dropdown > .dropdown.icon,
+  .ui.selection.dropdown > .search.icon {
+    text-align: left;
+    left: 0;
+  }
+  .ui.dropdown .menu {
+    right: 0;
+  }
+  .ui.dropdown .menu > .item {
+    text-align: right;
+  }
+  .insuranceRadio {
+    padding-right: 10px;
+    padding-left: 0;
+    .customRadio .inline + .inline {
+      margin-right: 10px;
+      margin-left: 0;
+    }
+  }
+  .maternityRadio {
+    padding-right: 10px;
+    padding-left: 0;
+    .customRadio .inline + .inline {
+      margin-right: 10px;
+      margin-left: 0;
+    }
+  }
+}
+
+//App Arabic Version End Here //
