--- a/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
@@ -38,3 +38,6 @@
       top: -1px;
       left: 15px;
       height: 101px; }
+  .htpl-phase1-seconary-insurance-form .insuranceRadio {
+    padding-right: 10px;
+    padding-left: 0; }
