UI Teak under Patient Registration Arabic

--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
@@ -22,4 +22,5 @@
     border-right: 1px solid #e6e6e6;
     width: 10px; }
   .hptl-phase1-add-consultation-form .maternityRadio {
-    padding-left: 10px; }
+    padding-left: 15px;
+    padding-right: 0; }
