--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
@@ -77,7 +77,7 @@
     }
   }
   .insuranceRadio {
-    padding-right: 10px;
-    padding-left: 0;
+    padding-left: 15px;
+    padding-right: 0;
   }
 }
