--- a/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
@@ -39,5 +39,5 @@
       left: 15px;
       height: 101px; }
   .htpl-phase1-seconary-insurance-form .insuranceRadio {
-    padding-right: 10px;
-    padding-left: 0; }
+    padding-left: 15px;
+    padding-right: 0; }
