--- a/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.scss
@@ -61,7 +61,7 @@
     }
   }
   .insuranceRadio {
-    padding-right: 10px;
-    padding-left: 0;
+    padding-left: 15px;
+    padding-right: 0;
   }
 }
