--- a/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
+++ b/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
@@ -1,10 +1,6 @@
 .CanvasEditorCntr {
   width: 100%;
   margin-top: 20px;
-  .image-area-cntr {
-    top: 29vh !important;
-    left: 29vw !important;
-  }
   .tui-image-editor-container {
     width: 81.5vw !important;
     height: 75vh !important;
@@ -69,6 +65,47 @@
     }
   }
 }
+.saveWrapper {
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+
+  .saveWindow {
+    width: 50vw;
+    -webkit-box-shadow: 10px 10px 10px #000;
+    box-shadow: 10px 10px 10px #000;
+    position: absolute;
+    top: 200px;
+    z-index: 99;
+    background: #fff;
+    left: 25%;
+    border-radius: 3px;
+
+    .saveHeader {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.16);
+      padding-top: 12px;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+    }
+    .textAreaRemarks {
+      border: 1px solid rgba(0, 0, 0, 0.16);
+      height: 100px;
+    }
+    .saveFooter {
+      border-top: 1px solid rgba(0, 0, 0, 0.16);
+      padding-top: 5px;
+      padding-bottom: 5px;
+      button {
+        float: right;
+        margin-left: 10px;
+      }
+    }
+  }
+}
 .diagramDropdown {
   height: 51px;
   img {
@@ -84,34 +121,5 @@
   span:first-child {
     font-size: 1rem;
     font-weight: bold;
-.saveWindow {
-  // display: none;
-  width: 50vw;
-  -webkit-box-shadow: 10px 10px 10px #000;
-  box-shadow: 10px 10px 10px #000;
-  position: absolute;
-  top: 150px;
-  z-index: 99;
-  background: #fff;
-  left: 25%;
-  border-radius: 3px;
-  .saveHeader {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.16);
-    padding-top: 12px;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-  }
-  .textAreaRemarks {
-    border: 1px solid rgba(0, 0, 0, 0.16);
-    height: 100px;
-  }
-  .saveFooter {
-    border-top: 1px solid rgba(0, 0, 0, 0.16);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    button {
-      float: right;
-      margin-left: 10px;
-    }
   }
 }
