--- a/client/src/Reports/report-style.scss
+++ b/client/src/Reports/report-style.scss
@@ -78,3 +78,17 @@
 .reportFooterDetails {
   text-align: right;
 }
+
+.forPDF {
+  .tbl-content {
+    height: auto !important;
+    max-height: inherit !important;
+    overflow: auto !important;
+  }
+  th,
+  td {
+    font-size: 0.7rem;
+    padding: 3px;
+    width: auto !important;
+  }
+}
