--- a/client/src/Components/MRD/PatientMRD/patient_mrd.css
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.css
@@ -24,6 +24,7 @@
     border: 1px solid #e1e1e1; }
     .patient-mrd .patientProfile .patientInfo-Top .patientImg img {
       height: 55px;
+      width: auto;
       border-radius: 4px;
       overflow: hidden;
       -webkit-transition: height 0.3s;
