--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -35,6 +35,7 @@
         border: 1px solid #e1e1e1;
         img {
           height: 55px;
+          width: auto;
           border-radius: 4px;
           overflow: hidden;
           -webkit-transition: height 0.3s; /* For Safari 3.1 to 6.0 */
