--- a/client/src/Components/MRD/PatientMRD/patient_mrd.css
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.css
@@ -22,6 +22,8 @@
     margin: 1px 10px;
     border-radius: 4px;
     border: 1px solid #e1e1e1; }
+    .patient-mrd .patientProfile .patientInfo-Top .patientImg .image-drop-area {
+      min-height: 59px; }
     .patient-mrd .patientProfile .patientInfo-Top .patientImg img {
       height: 55px;
       width: auto;
