--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -33,6 +33,9 @@
         margin: 1px 10px;
         border-radius: 4px;
         border: 1px solid #e1e1e1;
+        .image-drop-area {
+          min-height: 59px;
+        }
         img {
           height: 55px;
           width: auto;
