--- a/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
+++ b/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
@@ -139,7 +139,6 @@
 }
 
 .canvasImgPreviewWindowWrapper {
-  display: none;
   width: 100%;
   background: rgba(0, 0, 0, 0.8);
   height: 100%;
@@ -186,7 +185,6 @@
   }
 }
 .canvasImgCompareWindowWrapper {
-  display: none;
   width: 100%;
   background: rgba(0, 0, 0, 0.8);
   height: 100%;
@@ -207,8 +205,8 @@
     padding: 15px;
 
     img {
-      width: 49.5%;
-      height: auto;
+      width: 100%;
+      height: 300px;
       border: 1px solid #c3c3c3;
       margin: 0;
       padding: 0;
@@ -236,6 +234,12 @@
 }
 .diagramDropdown {
   height: 51px;
+  .image-drop-area {
+    width: 50px;
+    height: 50px;
+    float: left;
+    min-height: 50px;
+  }
   img {
     width: 50px;
     height: 50px;
