--- a/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
+++ b/client/src/Components/PatientProfile/ExamDiagramStandolone/ExamDiagramStandolone.scss
@@ -49,7 +49,7 @@
   background: #fff;
   border-bottom: 1px solid #d0d0d0;
   border-right: 1px solid #d0d0d0;
-  height: 51.5vh !important;
+  height: 47.5vh !important;
   overflow-y: auto;
   overflow-x: hidden;
   .eachDiagram {
@@ -149,17 +149,19 @@
     -webkit-box-shadow: 10px 10px 10px #000;
     box-shadow: 10px 10px 10px #000;
     position: absolute;
-    top: 100px;
+    top: 60px;
     z-index: 99;
     background: #fff;
     left: 10%;
     min-height: 60vh;
     border-radius: 3px;
     padding: 15px;
+    text-align: center;
 
     img {
-      width: 99.5%;
-      height: auto;
+      width: auto;
+      max-width: 100%;
+      height: 382px;
       border: 1px solid #c3c3c3;
       margin: 0;
       padding: 0;
@@ -196,16 +198,18 @@
     -webkit-box-shadow: 10px 10px 10px #000;
     box-shadow: 10px 10px 10px #000;
     position: absolute;
-    top: 100px;
+    top: 60px;
     z-index: 99;
     background: #fff;
     left: 10%;
     min-height: 60vh;
     border-radius: 3px;
     padding: 15px;
+    text-align: center;
 
     img {
-      width: 100%;
+      max-width: 100%;
+      width: auto;
       height: 300px;
       border: 1px solid #c3c3c3;
       margin: 0;
