--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,8 @@
       /* border-bottom: 1px solid #3d3d3d; */
       border-top: 1px solid #e5e5e5;
       display: block;
-      width: 100%; }
+      width: 100%;
+      height: 85px; }
     :global .print-body .hospitalLogo {
       color: #ccc;
       text-align: center;
@@ -56,8 +57,9 @@
     :global .print-body .otherInfo {
       text-align: right;
       float: right;
-      width: 15%;
-      border-left: 1px dotted #ccc; }
+      width: 150px;
+      border-left: 1px dotted #ccc;
+      height: 70px; }
     :global .print-body .hospitalAddress {
       text-align: center;
       margin: 0 auto;
@@ -817,18 +819,14 @@
   :global .cashReciptStyles .hospitalLogo {
     width: 150px;
     height: 70px;
-    background: #f3f3f3;
-    border-radius: 5px;
     line-height: 70px;
     color: #ccc;
     text-align: center;
-    background: url("../src/assets/images/hospital_logo_reports.webp") no-repeat center;
     background-size: 100%; }
   :global .cashReciptStyles .hospitalAddress {
-    width: 250px;
-    text-align: right;
-    float: right;
-    margin: 0;
+    width: 65%;
+    text-align: center;
+    margin: 0 150px;
     padding: 0; }
   :global .cashReciptStyles span {
     color: #696969;
