--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -40,6 +40,7 @@
       border-top: 1px solid #e5e5e5;
       display: block;
       width: 100%;
+      height: 85px;
     }
 
     .hospitalLogo {
@@ -59,11 +60,9 @@
     .otherInfo {
       text-align: right;
       float: right;
-      width: 15%;
+      width: 150px;
       border-left: 1px dotted #ccc;
-
-      b {
-      }
+      height: 70px;
     }
 
     .hospitalAddress {
@@ -1145,27 +1144,23 @@
     .receipt-header {
       text-align: center;
       line-height: 62px;
-
       text-transform: uppercase;
       color: #717171;
     }
     .hospitalLogo {
       width: 150px;
       height: 70px;
-      background: #f3f3f3;
-      border-radius: 5px;
       line-height: 70px;
       color: #ccc;
       text-align: center;
-      background: url("../src/assets/images/hospital_logo_reports.webp")
-        no-repeat center;
+      // background: url("../src/assets/images/hospital_logo_reports.webp")
+      //   no-repeat center;
       background-size: 100%;
     }
     .hospitalAddress {
-      width: 250px;
-      text-align: right;
-      float: right;
-      margin: 0;
+      width: 65%;
+      text-align: center;
+      margin: 0 150px;
       padding: 0;
     }
     span {
