--- a/client/src/Components/Dashboard/dashboard.css
+++ b/client/src/Components/Dashboard/dashboard.css
@@ -9,10 +9,10 @@
     position: relative;
     z-index: 1; }
     .dashboard .card .content {
-      padding: 15px 15px 10px 15px; }
+      padding: 15px 15px 0 15px; }
       .dashboard .card .content .footer {
         padding: 0;
-        line-height: 30px; }
+        line-height: 25px; }
         .dashboard .card .content .footer .stats {
           display: inline-block;
           color: #808080;
@@ -28,21 +28,15 @@
             float: right; }
     .dashboard .card .numbers {
       text-align: right;
-      font-weight: 600; }
+      font-weight: 600;
+      font-size: 1.3rem; }
       .dashboard .card .numbers p {
         font-weight: normal;
-        margin: 0; }
+        margin: 0;
+        font-size: 1rem; }
     .dashboard .card .icon-big i {
       min-height: 3.5rem;
       font-size: 2.5em; }
-    .dashboard .card .icon-big .fa-hand-holding-usd:before {
-      color: #c655cc; }
-    .dashboard .card .icon-big .fa-hospital:before {
-      color: #7455cc; }
-    .dashboard .card .icon-big .fa-user-md:before {
-      color: #3c67dd; }
-    .dashboard .card .icon-big .fa-walking:before {
-      color: #9d3cdd; }
     .dashboard .card h6 {
       padding: 0 15px;
       min-height: 35px;
@@ -65,5 +59,15 @@
       position: relative; }
       .dashboard .card .dashboardGridCntr h6 {
         text-align: center; }
+    .dashboard .card:nth-child(1) .fas:before {
+      color: #c655cc; }
+    .dashboard .card:nth-child(2) .fas:before {
+      color: #7455cc; }
+    .dashboard .card:nth-child(3) .fas:before {
+      color: #3c67dd; }
+    .dashboard .card:nth-child(4) .fas:before {
+      color: #9d3cdd; }
+    .dashboard .card .table {
+      margin-bottom: 0; }
   .dashboard hr {
     margin: 0 !important; }
